--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div id='app'></div>
+    <script src="./components/TwitchLink.js"></script>
     <script src="./components/App.js"></script>
     <script src="./index.js"></script>
   </body>
