--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
       crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.5.4/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.5.4/react-dom.js"></script>
-    <script src="../fakeData/fakeData.js"></script>
   </head>
   <body>
     <div id='app'></div>
     <script src="./components/TwitchPlayer.js"></script>
     <script src="./components/TwitchLink.js"></script>
+       <script src="./components/FavLink.js"></script>
     <script src="./components/App.js"></script>
     <script src="./index.js"></script>
   </body>
