--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,11 @@
       crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.5.4/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.5.4/react-dom.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
+    
   </head>
   <body>
     <div id='app'></div>
+    <script src="./clientID/clientID.js"></script>
     <script src="./components/TwitchPlayer.js"></script>
     <script src="./components/TwitchChat.js"></script>
     <script src="./components/TwitchLink.js"></script>
